qol and favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, height=device-height,  initial-scale=1.0, user-scalable=no,user-scalable=0"/>
 </head>
 <body>
@@ -95,7 +96,7 @@
         </div>
         <div class="desc">
             <h1 class="desc__heading">What is Jumbl?</h1>
-            <p class="desc__text">A simple word game where the player has to figure out what the jumbl'd word is within a set amount of time. You gain time by guessing correctly. When the timer hits 0, you lose. How many points can you get?<br><br><span class="desc__state-change">You are currently playing as a guest. If you want to submit your score to the leaderboard, you will need to <a onclick="openLoginModal()">Login</a></span></p>
+            <p class="desc__text">A simple word game where the player has to figure out what the jumbl'd word is within a set amount of time. You gain time by guessing correctly. When the timer hits 0, you lose. Click the empty boxes to start. How many points can you get?<br><br><br><span class="desc__state-change">You are currently playing as a guest. If you want to submit your score to the leaderboard, you will need to <a onclick="openLoginModal()">Login</a></span></p>
         </div>
         <input type="text" class="keyboard__hack">
     </main>
