support for dev environment

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -22,6 +22,7 @@
     <div class="leaderboard">
     </div>
     </main>
+    <script src="config.js"></script>
     <script src="./leaderboard.js"></script>
 </body>
 </html>
