--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <input type="text" class="keyboard__hack">
     </main>
     <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+<script src="config.js"></script>
 <script src="./app.js"></script>
 </body>
 </html>
